--- a/configs/qt5_test_defconfig
+++ b/configs/qt5_test_defconfig
@@ -4,6 +4,7 @@ BR2_CCACHE=y
 # BR2_COMPILER_PARANOID_UNSAFE_PATH is not set
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_BOOTLIN=y
+BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_AARCH64_GLIBC_STABLE=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_ROOTFS_MERGED_USR=y
 # BR2_TARGET_GENERIC_GETTY is not set
