--- a/package/Config.in
+++ b/package/Config.in
@@ -1369,6 +1369,7 @@ menu "Audio/Sound"
 	source "package/spandsp/Config.in"
 	source "package/speex/Config.in"
 	source "package/speexdsp/Config.in"
+	source "package/sratom/Config.in"
 	source "package/taglib/Config.in"
 	source "package/tinyalsa/Config.in"
 	source "package/tremor/Config.in"
